<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context=".activity.NativeActivity">    <Button        android:id="@+id/btnNativeAd"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/native_ad" />    <Button        android:id="@+id/btnNativeAdRecycleView"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/native_ad_list" />    <Button        android:id="@+id/btnNativeExpressAd"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/native_ad_express" />    <Button        android:id="@+id/btnNativeExpressAdRecycleView"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/native_ad_express_list" /></LinearLayout>